Use a single modal in restore to avoid flickering. Refactor modal state. Allow reset. (#214)

--- a/src/components/PinModal/style.scss
+++ b/src/components/PinModal/style.scss
@@ -1,3 +1,5 @@
-.error-msg {
-  text-align: center;
+#pin-input-container {
+  position: absolute;
+  top: 140px;
+  width: 100%;
 }
